New plugins; bootstrapping improvements.